--- a/sample.ipynb
+++ b/sample.ipynb
@@ -1037,6 +1037,12 @@
    "execution_count": 16
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "sort by increasing",
+   "id": "6b4a230f05bf60c2"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-03T12:33:07.144291Z",
@@ -1138,6 +1144,12 @@
    "execution_count": 17
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "sort by decreasing",
+   "id": "e1608a4f428588d0"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-03T12:33:07.161868Z",
@@ -1237,6 +1249,12 @@
     }
    ],
    "execution_count": 18
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Array concatenation",
+   "id": "a12153377887c755"
   },
   {
    "metadata": {
@@ -1415,6 +1433,12 @@
    "execution_count": 19
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "the most repeated value, the probability that there are several of them is taken into account",
+   "id": "c17e818c76cacdb"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-03T12:33:07.189071Z",
@@ -1443,19 +1467,28 @@
    "execution_count": 20
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "function that changes the value in a column, added start conditions zero or one. Returns the modified table and the average value",
+   "id": "1460cb193a77ae4"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-03T12:33:07.198323Z",
-     "start_time": "2025-02-03T12:33:07.189071Z"
+     "end_time": "2025-02-03T13:41:21.886918Z",
+     "start_time": "2025-02-03T13:41:21.877152Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def meang_processing(arr, column_in, numbe_column_start_zero=False):\n",
-    "    if numbe_column_start_zero == False:\n",
+    "    \"\"\"If the column numbering starts with 1, pass the table and the column number to the function.\n",
+    "If the column numbering starts with 0, then\n",
+    "add a third variable True to the data passed to the function.\"\"\"\n",
+    "    if not numbe_column_start_zero:\n",
     "        column = column_in - 1\n",
     "    else:\n",
-    "        column = column_in\n",
+    "        column = column_in \n",
     "    mean_value = np.mean(arr[:,column])\n",
     "    mask = ( arr[:,column] < mean_value) \n",
     "    result = np.copy(arr)\n",
@@ -1467,13 +1500,19 @@
    ],
    "id": "9bfccab873e3e3d0",
    "outputs": [],
-   "execution_count": 21
+   "execution_count": 23
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "use of the third column function start counting 1",
+   "id": "eb3559b1ec7c5c7c"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-03T12:33:07.220542Z",
-     "start_time": "2025-02-03T12:33:07.198323Z"
+     "end_time": "2025-02-03T13:48:02.879523Z",
+     "start_time": "2025-02-03T13:48:02.862874Z"
     }
    },
    "cell_type": "code",
@@ -1648,12 +1687,12 @@
        "       [0.   , 2.5  , 1.125, 1.7  ]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 22
+   "execution_count": 25
   },
   {
    "metadata": {
