dz_2_finish_transform_index

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -275,7 +275,8 @@
    "cell_type": "code",
    "source": [
     "n_nan = 20\n",
-    "a[( np.random.choice(a.size, size=n_nan, replace=False) // a.shape[1]), ( np.random.choice(a.shape[1], size=n_nan))] = np.nan\n",
+    "a[np.unravel_index(np.random.choice(a.size, n_nan, replace=False),a.shape)] = np.nan\n",
+    "\n",
     "a"
    ],
    "id": "47e27c237396035e",
